# monty-data-agent

./: .env.example  .gitignore  DESIGN.md  Justfile  README.md  docker-compose.temporal.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: orchestration-comparison.md  pydantic-ai-experiment.md  temporal-agent-architecture.md
docs/brainstorms/: 2026-04-01-chatkit-brainstorm.md
docs/plans/: 2026-03-19-feat-finish-temporal-plan-execute-synthesize-plan.md  2026-04-01-refactor-chatkit-extraction-plan.md
eval/: REPORT.md  results.json  results_summary.json  run_eval.py
src/sandbox_agent/: config.py  main.py  shared.py
src/sandbox_agent/agent/: client.py  prompts.py  tools.py
src/sandbox_agent/api/: models.py  routes.py  sse.py
src/sandbox_agent/codemode/: __main__.py  client.py  prompts.py  registry.py  server.py
src/sandbox_agent/data/: sqlite_store.py
src/sandbox_agent/engine/: datasets.py  duckdb_store.py  sqlite_store.py
src/sandbox_agent/graph_state/: client.py  nodes.py
src/sandbox_agent/parallel/: client.py  dag.py
src/sandbox_agent/planning/: __init__.py  helpers.py  models.py  prompts.py
src/sandbox_agent/pydantic_agent/: client.py
src/sandbox_agent/pydantic_graph_mode/: client.py
src/sandbox_agent/sandbox/: executor.py  functions.py
src/sandbox_agent/temporal/: __main__.py  (+6 more)
static/: index.html
tests/: conftest.py  test_api.py  test_codemode.py  test_duckdb_store.py  test_executor.py  test_graph_state.py  test_parallel_dag.py  test_pydantic_agent.py  test_pydantic_graph_mode.py  test_temporal_models.py  test_temporal_workflows.py
